force-app/main/default/objects/Forward_FOB_Contract_Line_Item__c/Forward_FOB_Contract_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Forward FOB Contract Line Item</label>
    <nameField>
        <displayFormat>FBFL-{00000000}</displayFormat>
        <label>Forward Contract FOB Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forward FOB Contract Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>