force-app/main/default/objects/Forward_FOB_Contract_Line_Item__c/fields/Average_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Average_Exchange_Rate__c</fullName>
    <description>This is to calculate the average exchange rate</description>
    <formula>( Cover_Amount_Contract_Rate__c  +   Cover_Amount_Spot_Rate_SGD__c  )/  Stock_Vehicle_Master__r.FOB_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Exchange Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>