force-app/main/default/objects/Forward_FOB_Contract_Line_Item__c/fields/Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Balance_Amount__c</fullName>
    <formula>Stock_Vehicle_Master__r.FOB_Amount__c - Execution_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Actual FOB Amount - Execution Amount</inlineHelpText>
    <label>Balance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>