force-app/main/default/objects/Forward_FOB_Contract_Line_Item__c/fields/Balance_Amount_To_Cover__c.field-meta.xml
<CustomField>
    <fullName>Balance_Amount_To_Cover__c</fullName>
    <formula>IF( ISPICKVAL( FOB_Additional_Contract__r.Status__c , &apos;Forward Contract Execute&apos;) , ( 1 -  Forward_FOB_Contract__r.Cover_Percentage__c ) * Execution_Amount__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>( 1 - Cover Percentage ) * Estimated FOB</inlineHelpText>
    <label>Balance Amount to Cover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>