force-app/main/default/objects/Forward_FOB_Contract_Line_Item__c/fields/Balance_to_Cover__c.field-meta.xml
<CustomField>
    <fullName>Balance_to_Cover__c</fullName>
    <formula>1 -  Forward_FOB_Contract__r.Cover_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>1 - Cover Percentage</inlineHelpText>
    <label>Balance to Cover (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>