force-app/main/default/objects/Forward_FOB_Contract_Line_Item__c/fields/Bank_Contract_No_Sell_Execute__c.field-meta.xml
<CustomField>
    <fullName>Bank_Contract_No_Sell_Execute__c</fullName>
    <formula>FOB_Additional_Contract__r.Bank_Contract_No_Sell_Execute__c</formula>
    <label>Bank Contract No (Sell/Execute)</label>
    <type>Text</type>
</CustomField>