force-app/main/default/objects/Forward_FOB_Contract_Line_Item__c/fields/Contract_Amount_Spot_Rate__c.field-meta.xml
<CustomField>
    <fullName>Contract_Amount_Spot_Rate__c</fullName>
    <formula>Stock_Vehicle_Master__r.FOB_Amount__c -  Cover_Amount_Foreign__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Actual FOB Amount - Cover Amount</inlineHelpText>
    <label>Contract Amount (Spot Rate)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>