force-app/main/default/objects/Forward_FOB_Contract_Line_Item__c/fields/Cover_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cover_Amount__c</fullName>
    <formula>IF( Stock_Vehicle_Master__r.FOB_Amount__c == 0 ,  Stock_Vehicle_Master__r.Estimated_FOB__c *  Forward_FOB_Contract__r.Cover_Percentage__c , Stock_Vehicle_Master__r.FOB_Amount__c * Forward_FOB_Contract__r.Cover_Percentage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Actual/Estimated FOB Amount * Cover Percentage</inlineHelpText>
    <label>Cover Amount - Foreign Curr (Unused)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>