force-app/main/default/objects/Forward_FOB_Contract_Line_Item__c/fields/Cover_Amount_Foreign__c.field-meta.xml
<CustomField>
    <fullName>Cover_Amount_Foreign__c</fullName>
    <label>Cover Amount - Foreign Curr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>