force-app/main/default/objects/Forward_FOB_Contract_Line_Item__c/fields/Cover_Amount_Spot_Rate__c.field-meta.xml
<CustomField>
    <fullName>Cover_Amount_Spot_Rate__c</fullName>
    <formula>IF(ISPICKVAL(Forward_FOB_Contract__r.Currency_Code__c, &apos;JPY&apos;), FOB_Additional_Contract__r.Spot_Rate_Sell_Execute__c * Cover_Amount_Foreign__c / 100, FOB_Additional_Contract__r.Spot_Rate_Sell_Execute__c * Cover_Amount_Foreign__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Spot Rate * Cover Amount</inlineHelpText>
    <label>Cover Amount (Spot Rate) - SGD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>