force-app/main/default/objects/Forward_FOB_Contract_Line_Item__c/fields/Cover_Amount_Spot_Rate_SGD__c.field-meta.xml
<CustomField>
    <fullName>Cover_Amount_Spot_Rate_SGD__c</fullName>
    <description>Spot Contract Amount * Spot Rate</description>
    <formula>Cover_Amount_Spot_Rate_Foreign__c *  FOB_Additional_Contract__r.Spot_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cover Amount Spot Rate SGD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>