force-app/main/default/objects/Forward_FOB_Contract_Line_Item__c/fields/Currency_Code_Spot_Rate__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code_Spot_Rate__c</fullName>
    <formula>TEXT( FOB_Additional_Contract__r.Currency_Code_Spot_Rate__c )</formula>
    <label>Currency Code (Spot Rate)</label>
    <type>Text</type>
</CustomField>