force-app/main/default/objects/Forward_FOB_Contract_Line_Item__c/fields/Effective_Date_Sell_Execute__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_Sell_Execute__c</fullName>
    <formula>FOB_Additional_Contract__r.Effective_Date_Sell_Execute__c</formula>
    <label>Effective Date (Sell/Execute)</label>
    <type>Date</type>
</CustomField>