force-app/main/default/objects/Forward_FOB_Contract_Line_Item__c/fields/Estimated_FOB__c.field-meta.xml
<CustomField>
    <fullName>Estimated_FOB__c</fullName>
    <formula>Stock_Vehicle_Master__r.Estimated_FOB__c</formula>
    <label>Estimated FOB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>