force-app/main/default/objects/Forward_FOB_Contract_Line_Item__c/fields/Final_Vehicle_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Vehicle_Price__c</fullName>
    <formula>Stock_Vehicle_Master__r.Final_Vehicle_Price__c</formula>
    <label>Final Vehicle Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>