force-app/main/default/objects/Forward_FOB_Contract_Line_Item__c/fields/FOB_Additional_Contract__c.field-meta.xml
<CustomField>
    <fullName>FOB_Additional_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FOB Additional Contract</label>
    <referenceTo>FOB_Additional_Contract__c</referenceTo>
    <relationshipLabel>Forward FOB Contract Line Items</relationshipLabel>
    <relationshipName>Forward_FOB_Contract_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>