force-app/main/default/objects/Forward_FOB_Contract_Line_Item__c/fields/FOB_Amount__c.field-meta.xml
<CustomField>
    <fullName>FOB_Amount__c</fullName>
    <formula>Stock_Vehicle_Master__r.FOB_Amount__c</formula>
    <label>FOB Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>