force-app/main/default/objects/Forward_FOB_Contract_Line_Item__c/fields/Forward_FOB_Contract__c.field-meta.xml
<CustomField>
    <fullName>Forward_FOB_Contract__c</fullName>
    <label>Forward FOB Contract</label>
    <referenceTo>Forward_FOB_Contract__c</referenceTo>
    <relationshipLabel>Forward FOB Contract Line Items</relationshipLabel>
    <relationshipName>Forward_Contract_FOB_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>