force-app/main/default/objects/Forward_FOB_Contract_Line_Item__c/fields/Gain_Loss__c.field-meta.xml
<CustomField>
    <fullName>Gain_Loss__c</fullName>
    <formula>IF( OR( ISPICKVAL( FOB_Additional_Contract__r.Status__c, &apos;Forward Contract Sell&apos; ),
        ISPICKVAL( FOB_Additional_Contract__r.Status__c, &apos;PO Cancellation&apos; ),
        ISPICKVAL( FOB_Additional_Contract__r.Status__c, &apos;Completed (PO Cancel)&apos;)), Cover_Amount_Spot_Rate__c -  Cover_Amount_Contract_Rate__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Spot Rate Amt in SGD - Contract Rate Amt in SGD</inlineHelpText>
    <label>Gain/Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>