force-app/main/default/objects/Forward_FOB_Contract_Line_Item__c/fields/Hedging_Gain_Loss__c.field-meta.xml
<CustomField>
    <fullName>Hedging_Gain_Loss__c</fullName>
    <formula>IF( ISPICKVAL( FOB_Additional_Contract__r.Status__c, &apos;Forward Contract Sell&apos;), ( FOB_Additional_Contract__r.Spot_Rate_Sell_Execute__c - Forward_FOB_Contract__r.Contract_Rate__c ) * Cover_Amount_Foreign__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>( Spot Rate - Contract Rate ) * Cover Amount</inlineHelpText>
    <label>Hedging Gain/Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>