force-app/main/default/objects/Forward_FOB_Contract_Line_Item__c/fields/Spot_Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>Spot_Contract_Amount__c</fullName>
    <formula>Stock_Vehicle_Master__r.FOB_Amount__c - Cover_Amount_Foreign__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Actual FOB Amount - Cover Amount</inlineHelpText>
    <label>Spot Contract Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>