force-app/main/default/objects/Forward_FOB_Contract_Line_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( !ISBLANK( Forward_FOB_Contract__c ) &amp;&amp; ISBLANK( FOB_Additional_Contract__c ) , &apos;Forward Contract Buy&apos; , TEXT( FOB_Additional_Contract__r.Status__c ))</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>