force-app/main/default/objects/Forward_FOB_Contract_Line_Item__c/fields/Stock_Vehicle_Master__c.field-meta.xml
<CustomField>
    <fullName>Stock_Vehicle_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock Vehicle Master</label>
    <referenceTo>Vehicle_Master2__c</referenceTo>
    <relationshipName>Forward_Contract_FOB_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>