force-app/main/default/objects/Forward_FOB_Contract_Line_Item__c/fields/Transaction_Date_Sell_Execute__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date_Sell_Execute__c</fullName>
    <formula>FOB_Additional_Contract__r.Transaction_Date_Sell_Execute__c</formula>
    <label>Transaction Date (Sell/Execute)</label>
    <type>Date</type>
</CustomField>