force-app/main/default/objects/Forward_FOB_Contract_Line_Item__c/fields/Transaction_Date_Spot_Rate__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date_Spot_Rate__c</fullName>
    <formula>FOB_Additional_Contract__r.Transaction_Date_Spot_Rate__c</formula>
    <label>Transaction Date (Spot Rate)</label>
    <type>Date</type>
</CustomField>